Parameter handling implemented, with tests and documented in JavaDoc trimLines uses already parameters and bug fixed when there are only empty lines in the trimming